Fix contact skype button center align and menu changes
Fix contact skype button center align and menu changes

--- a/css/style.css
+++ b/css/style.css
@@ -247,23 +247,15 @@ span.menu {
 }
 
 #menuIcon h1 a{
-    height:94px;
-    width: 94px;
-    float: right;
+    height: 25px;
+    width: 55px;
     z-index: 100;
-    border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  border: 4px solid #fff;
     position: absolute;
-    background:#d06079;
-    background-image: url(../images/logosquare_small.gif);
-    background-size: 89px 88px;
+    background: url(../images/nav_icon.png) no-repeat;
+    background-size: contain;
     display: inline-block;
-    right: -1px;
-    top: 35px;
+    top: 55px;
+    right: 15px;
 }
 
 .menu.right-top-header img{
@@ -301,17 +293,20 @@ span.menu {
 }
 
 #inPage #selectEnglish{
-    right: 150px;
+    right: 3px;
     position: absolute;
-    top: 16px;
-    text-transform: uppercase;
+    top: 15px;
+    width: 55px;
+    margin-right: 10px;
     letter-spacing: 1px;
+    font-weight: 300;
+    font-family: Titillium Web, sans-serif;
 }
 
 .slide-menu {
-	width: 250px;
+	width: 400px;
 	float: right;
-    overflow: hidden;
+    overflow: auto;
 }
 .slide-menu  ul{
 	display:none;
@@ -332,11 +327,13 @@ span.menu {
     height: 100%;
 }
 .slide-menu ul li a {
-  padding: 0.5em 15px;
+  padding: .5em 20px;
   display: block;
-  font-size:20px;
-  border-bottom: 1px solid  #f4f4f6;
+  font-size: 20px;
+  border-bottom: 1px solid #f4f4f6;
   color: #848484;
+  font-family: Titillium Web, sans-serif;
+  font-weight: 300;
   text-decoration: none;
 }
 
@@ -622,17 +619,27 @@ h2{
 /*    min-height: 620px;*/
 }
 #scrollDown{
-	text-decoration: none;
-	position: absolute;
-	top: 690px;
-	right: 3%;
+	/*text-decoration: none;
+	position: absolute;*/
+	/* top: 690px; */
+    /* right: 3%; */
 /*	overflow: hidden;*/
-	width: 60px;
-	height: 60px;
-	border: none;
-	text-indent: 100%;
-	background: url("../images/open.png") no-repeat 0px 0px;
-    background-size: contain;
+/*	height: 60px;*/
+/*	border: none;*/
+/*	text-indent: 100%;*/
+/*	background: url("../images/scrolldown.png") no-repeat 0px 0px;*/
+    position: relative;
+    color: #fff;
+    border-top: 1px solid #fff;
+    width: 147px;
+    height: 50px;
+    /* background-size: contain; */
+    font-size: 16px;
+    display: block;
+    text-align: center;
+    margin: 23px auto auto;
+    /* padding-bottom: 10px; */
+    line-height: 50px;
 }
 
 .methodology-background{
@@ -1006,6 +1013,10 @@ label{
     text-align: center;
 /*    padding:1em;*/
 }
+.intro.container{
+    margin: 2em auto;
+}
+
 
 .intro.container>.col-lg-8{
     padding-left: 2em;
@@ -1829,7 +1840,7 @@ form .form-item:nth-child(odd){
   font-size: 14px;
   cursor: pointer;
   font-weight: 500;
-  margin: 27px 0 0 15px;
+  margin: 27px 0 0 0px;
   border: 2px solid #d06079;
   background: #d06079;
   transition:0.5s all;
@@ -1893,12 +1904,17 @@ form input[type="text"].error, form textarea.error {
   margin-top: 1em;
 }
 
-
+#SkypeButton_Call_evapeko_1{
+    height: 68px;
+    width: 107px;
+    margin-left: 12px;
+}
 
 #SkypeButton_Call_evapeko_1 img{
 /*    background: #d06079;*/
     padding: 2px;
     border-radius: 6px;
+    margin: auto !important;
 }
 
 
@@ -2168,9 +2184,9 @@ padding:2em 0 0.5em 0;
 .logo {
   left: 43%;
 }
-#scrollDown {
+/*#scrollDown {
     top: 420px;
-}
+}*/
 .about-right h4 {
   font-size: 1.6em;
 }
@@ -2198,6 +2214,9 @@ padding:2em 0 0.5em 0;
  height: 504px;
 }
 */
+#scrollDown {
+    display: none;
+}
 .banner-info-text h2,
 .image-title h2{
   font-size: 1.5em;
@@ -2316,9 +2335,9 @@ padding:2em 0 0.5em 0;
   width: 126px;
 }
 
-#inPage #selectEnglish{
+/*#inPage #selectEnglish{
     right: 110px;
-}
+}*/
 }
 @media (max-width: 768px){
 /*
@@ -2515,6 +2534,10 @@ span.menu{
   display: none;
 }
 
+#menuIcon h1 a {
+    top: 52px;
+}
+
 #menuIcon{
   display: block;
     }
@@ -2579,9 +2602,9 @@ span.menu{
     width: 70%;
 }
 
-#scrollDown{
+/*#scrollDown{
     top:375px;
-}
+}*/
 .content p,
 .content li,
 .content ul,
@@ -2942,6 +2965,23 @@ h3{
 .logo {
   left: 35%;
 }
+
+#logo-left h1 a {
+    height: 50px;
+    width: 50px;
+    background-size: 45px 44px;
+    margin-right: 2px;
+}
+
+.left-top-header h2 {
+    font-size: 22px;
+    margin-top: 0;
+}
+
+#menuIcon h1 a {
+    width: 45px;
+}
+
 .header {
   height: 276px;
 }
@@ -2950,9 +2990,9 @@ h3{
   background-size: cover;
 }
 
-#scrollDown {
+/*#scrollDown {
     top: 345px;
-}
+}*/
 .banner-info-text.up h2{
     margin-top: 0 !important;
 }
